# js_proj_game

./: .gitignore  Cargo.toml  README.md  prepare_wasm.sh
src/: main.rs
src/movement/: mod.rs
