[package]
name = "js_proj_game"
version = "0.1.0"
edition = "2021"


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
# Compress as much as possible
opt-level = 'z'
# Enable link-time optimization (ignore library bounds and optimize everything together)
lto = true
codegen-units = 1

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[dependencies]
bevy = {version="0.15", features=["wayland", "dynamic_linking"]}
avian2d = { git = "https://github.com/Jondolf/avian", branch = "main" }
